--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.6
+ADD pyipptool.cfg/ /etc/pyipptool/pyipptool.cfg
 RUN mkdir /www
 WORKDIR /www
 ADD ./requirements.txt /www/requirements.txt
