--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -1,4 +1,5 @@
-Django==1.10.5
+Django==1.11
 psycopg2==2.6.2
 requests==2.12.5
-simplejson==3.10.0pyTelegramBotAPI>=2.3.1
+simplejson==3.10.0
+pyTelegramBotAPI>=2.3.1
