--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,3 @@
-FROM tutum/nginx
-RUN rm /etc/nginx/sites-enabled/default
+FROM nginx:alpine
 ADD sites-enabled/ /etc/nginx/sites-enabled
 ADD ssl/ /etc/nginx/ssl
