--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
   #   env_file: .env
 
   postgres:
-    image: postgres:9.5
+    image: postgres:9.5.8-alpine
     volumes:
       - ./dockerfiles/pgdata:/var/lib/postgresql/data/pgdata
     env_file: .env
