--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,4 +1,5 @@
-FROM tobi312/rpi-raspberrypi2-python-qemu:3.6
+FROM python:3.6
+# FROM tobi312/rpi-raspberrypi2-python-qemu:3.6
 ADD pyipptool.cfg/ /etc/pyipptool/pyipptool.cfg
 RUN mkdir /www
 WORKDIR /www
