--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -2,4 +2,5 @@ FROM python:3.6
 # FROM tobi312/rpi-raspberrypi2-python-qemu:3.6
 RUN mkdir /www
 WORKDIR /www
+ADD ./requirements.txt /www/requirements.txt
 RUN pip install -r requirements.txt
