--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "2"
 services:
 
   cups:
-    image: aadl/cups-alpine
-    # image: a0js/rpi-cups
+    # image: aadl/cups-alpine
+    image: a0js/rpi-cups
     env_file: .env
     volumes:
       - /var/run/dbus:/var/run/dbus
@@ -41,8 +41,8 @@ services:
     env_file: .env
 
   postgres:
-    image: postgres:9.5
-    # image: tobi312/rpi-postgresql
+    # image: postgres:9.5
+    image: tobi312/rpi-postgresql
     ports: 
       - "5432:5432"
     volumes:
@@ -50,18 +50,18 @@ services:
     env_file: .env
 
   sync:
-    image: resilio/sync
-    # image: yangxuan8282/rpi-resilio-sync
+    # image: resilio/sync
+    image: yangxuan8282/rpi-resilio-sync
     ports:
-      # - "8888:8888"
+      - "8888:8888"
       - "55555:55555"
     volumes:
       - data_storage:/mnt/sync:rw
     env_file: .env
 
   deluge:
-    image: twanislas/deluge
-    # image: jordancrawford/rpi-deluge
+    # image: twanislas/deluge
+    image: jordancrawford/rpi-deluge
     ports:
       - "8112:8112"
       - "58846:58846"
