--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,5 +1,5 @@
-FROM python:3.6
-# FROM tobi312/rpi-raspberrypi2-python-qemu:3.6
+# FROM python:3.6
+FROM tobi312/rpi-raspberrypi2-python-qemu:3.6
 RUN mkdir /www
 WORKDIR /www
 ADD ./requirements.txt /www/requirements.txt
