--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,8 @@ services:
     env_file: .env
 
   redis:
-    image: redis:latest
+    # image: redis:latest
+    image: hypriot/rpi-redis
     env_file: .env
 
 volumes:
