--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,15 @@ services:
       - "4713:4713"
 
   cups:
-    image: aadl/cups-alpine
+    build: ./cups
     # image: a0js/rpi-cups
     env_file: .env
     volumes:
       - /var/run/dbus:/var/run/dbus
       - /dev/bus/usb:/dev/bus/usb
-    # devices:
-    #   - /dev/usb
+    devices:
+      - /dev/usb
+    # command: bash start-cups.sh
     ports:
       - "631:631"
 
