--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -1,5 +1,5 @@
-FROM alpine:3.4
-# FROM armhf/alpine:3.4
+# FROM alpine:3.4
+FROM armhf/alpine:3.4
 
 RUN apk add --update --no-cache --repository=https://s3.amazonaws.com/aadl-github/alpine \
 	cups-pdf cups-filters 'cups<2.2.4' --allow-untrusted && \
