--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -1,28 +1,20 @@
+FROM alpine:3.4
 # FROM armhf/alpine:3.4
-FROM debian:stretch
 
-RUN apt-get -o Acquire::Check-Valid-Until=false update && apt-get -y install \
-  cups=2.2.1* \
-  cups-filters \
-  cups-pdf \
-  whois \
-  && rm -rf /var/lib/apt/lists/*
+RUN apk add --update --no-cache \
+	cups-filters 'cups<2.2.4' --allow-untrusted && \
+	sed -i 's/Listen localhost:631/Listen 0.0.0.0:631/' /etc/cups/cupsd.conf && \
+	sed -i 's/<Location \/>/<Location \/>\n  Allow All/' /etc/cups/cupsd.conf && \
+	sed -i 's/<Location \/admin>/<Location \/admin>\n  Allow All\n  Require user @SYSTEM/' /etc/cups/cupsd.conf && \
+	sed -i 's/<Location \/admin\/conf>/<Location \/admin\/conf>\n  Allow All/' /etc/cups/cupsd.conf && \
+	echo "ServerAlias *" >> /etc/cups/cupsd.conf && \
+	echo "DefaultEncryption Never" >> /etc/cups/cupsd.conf
 
-# Remove backends that don't make sense for container
-RUN rm /usr/lib/cups/backend/parallel \
-  && rm /usr/lib/cups/backend/serial \
-  && rm /usr/lib/cups/backend/usb
+VOLUME /etc/cups/ /var/log/cups /var/spool/cups /var/spool/cups-pdf /var/cache/cups
 
-COPY etc-cups /etc/cups
+COPY start_cups.sh /root/start-cups.sh
+RUN chmod +x /root/start-cups.sh
 
-VOLUME /etc/cups/ /var/log/cups /var/spool/cups /var/cache/cups
-
-COPY etc-pam.d-cups /etc/pam.d/cups
-
-COPY start_cups.sh /root/start_cups.sh
-RUN chmod +x /root/start_cups.sh \
-  && mkdir -p /etc/cups/ssl
-
-CMD ["/root/start_cups.sh"]
+CMD ["/root/start-cups.sh"]
 
 EXPOSE 631
