--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,13 +90,13 @@ services:
     image: hypriot/rpi-redis
     env_file: .env
 
-  # plex:
-  #   image: binhex/arch-plex:latest
-  #   volumes:
-  #     - data_storage:/media
-  #     - /etc/localtime:/etc/localtime:ro
-  #     - ./plex_config:/config
-  #   env_file: .env
+  plex:
+    image: binhex/arch-plex:latest
+    volumes:
+      - data_storage:/media
+      - /etc/localtime:/etc/localtime:ro
+      - ./plex_config:/config
+    env_file: .env
 
 volumes:
 
