--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,11 +91,12 @@ services:
     env_file: .env
 
   plex:
-    image: binhex/arch-plex:latest
+    # image: binhex/arch-plex:latest
+    image: jaymoulin/rpi-plex:latest
     volumes:
       - data_storage:/media
       - /etc/localtime:/etc/localtime:ro
-      - ./plex_config:/config
+      # - ./plex_config:/config
     env_file: .env
 
 volumes:
