--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,27 @@ services:
       - "630:631"
     # restart: always
 
+  mpd:
+    build: ./mpd
+    ports:
+      - "6600:6600"
+      - "8000:8000"
+    volumes:
+      - ./data/folders/Music:/mpd/music
+      - ./data/playlists:/mpd/playlists
+    devices:
+      - /dev/snd
+    # restart: always
+  ympd:
+    build: ./ympd
+    ports:
+      - "8080:8080"
+    links:
+      - "mpd:mpdhost"
+    depends_on:
+      - mpd  
+    # restart: always
+
   # service:
   #   build: ./service
   #   volumes:
@@ -42,19 +63,19 @@ services:
   #     - postgres:postgres
   #     - cups:cups
 
-  # nginx:
-  #   build: ./nginx
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./nginx/sites-enabled:/etc/nginx/sites-enabled
-  #     - ./nginx/ssl:/etc/nginx/ssl:ro
-  #   depends_on:
-  #     - service
-  #     - cups
-  #     - sync
-  #   env_file: .env
+  nginx:
+    build: ./nginx
+    ports:
+      - "80:8080"
+      - "443:443"
+    volumes:
+      - ./nginx/sites-enabled:/etc/nginx/sites-enabled
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - cups
+      - sync
+      - ympd
+    env_file: .env
 
   # postgres:
   #   # image: postgres:9.5
@@ -103,3 +124,4 @@ services:
   #   env_file: .env
   #   ports:
   #     - "32400:32400"
+
